# omnicopter

./: Dockerfile  README.md  docker-compose.yml  docker_commands  inav_6.1.0_TMOTORF7V2.hex
AeRoSim/: README.md
AeRoSim/aerosim_comm/msg/: ArmAction.msg  Training.msg
AeRoSim/uav_simulator/: CMakeLists.txt
AeRoSim/uav_simulator/launch/: spawn_mav.launch
AeRoSim/uav_simulator/models/omnicopter/: localToFixed.py  model.config  model.sdf
AeRoSim/uav_simulator/models/omnicopter/meshes/: CCW.stl
AeRoSim/uav_simulator/src/: beta_motor_plugin.cpp  odometry_plugin.cpp
AeRoSim/uav_simulator/worlds/: omnicopter.world  omnicopter_inav.world
bash_Scripts/: full_flip.sh  lift_off_land.sh  make_6D_traj.sh  make_flip.sh  make_flip_pitch.sh  make_rotate_6D_traj.sh  make_yaw.sh  take_off_land.sh
inav/build_SITL/: CMakeCache.txt  Makefile  cmake_install.cmake
inav/build_SITL/src/: Makefile  cmake_install.cmake
inav/build_SITL/src/main/: Makefile  cmake_install.cmake
inav/cmake/: sitl.cmake
inav/src/main/: main.c
inav/src/main/fc/: fc_init.h  fc_msp.c  fc_tasks.c  settings.yaml
inav/src/main/flight/: imu.c  mixer.c  mixer.h  pid.c  pid.h
inav/src/main/navigation/: navigation_multicopter.c  navigation_private.h
inav/src/main/rx/: rx.h
motors_scripts/: motors.c  motors_incr.c
omni_controller-main/: README.md  package.xml
omni_controller-main/config/: controller_gains.yaml
omni_controller-main/launch/: control.launch
omni_controller-main/srv/: LinearWrench.srv
omni_firmware-main/: CMakeLists.txt
omni_firmware-main/launch/: maneuver.launch  simulate.launch  system.launch
omni_firmware-main/msg/: Uvector.msg  errorMsg.msg
omni_firmware-main/params/: imu.yaml
omni_firmware-main/src/: state.cpp
omni_firmware-main/srv/: arm.srv
omni_maneuver-main/: CMakeLists.txt  package.xml
omni_maneuver-main/launch/: maneuver.launch
omni_maneuver-main/src/: helpers.cc  maneuver.cpp  maneuver_codes.cc
omni_maneuver-main/srv/: FullFlip.srv  GotoPoint.srv  RotateTo.srv
src/AeRoSim/aerosim_comm/: CMakeLists.txt  package.xml
src/AeRoSim/uav_simulator/: CMakeLists.txt  package.xml
src/AeRoSim/uav_simulator/config/: omni_att_ctrl_gains.yaml  omnicopter_params.yaml  vel_ctrl_gains.yaml
src/AeRoSim/uav_simulator/launch/: joystick.launch  omnicopter.launch  velocity_flight.launch
src/AeRoSim/uav_simulator/models/omnicopter/: model.sdf  sphericalToRPY.py
src/AeRoSim/uav_simulator/models/omnicopter/meshes/: CW.stl
src/AeRoSim/uav_simulator/nodes/: adapter.cpp  attitude_controller.cpp  joy_rc_sim.cpp  joy_vel_pub.cpp  velocity_controller.cpp
src/AeRoSim/uav_simulator/scripts/: joystick_mapper.py
src/ina226_driver/: CMakeLists.txt  package.xml
src/ina226_driver/launch/: ina226_driver.launch
src/ina226_driver/src/: ina226_driver.cpp
src/libkdtp/: CMakeLists.txt  package.xml
src/omni_controller-main/: CMakeLists.txt  package.xml
src/omni_controller-main/config/: controller_gains.yaml
src/omni_controller-main/include/: controller.hpp
src/omni_controller-main/src/: controller.cpp  distance.cpp  distance.h  utils.cpp  utils.h
src/omni_controller-main/srv/: AngularWrench.srv
src/omni_firmware-main/: CMakeLists.txt  package.xml
src/omni_firmware-main/include/: state.hpp
src/omni_firmware-main/launch/: controller_only.launch  dual_ekf_navsat_example.launch  system.launch  test.launch  vicon.launch
src/omni_firmware-main/msg/: FullPose.msg  errorMsg.msg
src/omni_firmware-main/src/: filter.cpp  state.cpp  ukf.h  ukf_codes.cpp  ukf_filter.cc  ukf_state.cc
src/omni_firmware-main/srv/: ZeroUKF.srv
src/omni_maneuver-main/: CMakeLists.txt  README.md
src/omni_maneuver-main/config/: controller_gains.yaml
src/omni_maneuver-main/include/: maneuver.hpp
src/omni_maneuver-main/src/: maneuver_codes.cc
src/omni_maneuver-main/srv/: Ellipse5D.srv  Goto6DPoint.srv  Land.srv  LiftOff.srv
src/servo_control_node/: CMakeLists.txt  package.xml
src/servo_control_node/config/: servo_config.yaml
src/servo_control_node/launch/: servo_control_node.launch
src/servo_control_node/src/: servo_control_node.cpp
src/servo_control_node/srv/: SetAngles.srv
