<?xml version="1.0"?>
<package format="2">
  <name>controller</name>
  <version>1.0.0</version>
  <description>
  This package includes controllers for different types of multirotor aerial vehicles.
  </description>
  <maintainer email="mahmoudhamandi@gmail.com">PR-foobar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>omni_firmware</build_depend>
  <build_depend>Eigen</build_depend>
  <build_depend>cmake_modules</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>omni_firmware</exec_depend>
  <exec_depend>Eigen</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
</package>
