<?xml version="1.0"?>
<package format="2">
  <name>aerosim_comm</name>
  <version>0.0.0</version>
  <description>AeRoSim msgs and services</description>

  <maintainer email="dimitris.chaikalis@nyu.edu">Dimitris Chaikalis</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
