<?xml version="1.0"?>
<package format="2">
  <name>uav_simulator</name>
  <version>0.0.0</version>
  <description>Sandbox of URDF Gazebo Simulation Stuff</description>

  <maintainer email="dimitris.chaikalis@nyu.edu">Dimitris Chaikalis</maintainer>

  <license>GNU</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>mav_msgs</build_export_depend>
	<build_depend>aerosim_comm</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>mav_msgs</exec_depend>	
  <exec_depend>aerosim_comm</exec_depend>

  <export>
  </export>
</package>
